--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <section class="Hero">
-        <nav class="navbar">
-            <h1 class="navbar__header">Header Logo</h1>
-            <div class="navbar__links">
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
-            </div>
-        </nav>
-        <div class="hero-content"></div>
+      <nav class="navbar">
+        <h1 class="navbar__header">Header Logo</h1>
+        <div class="navbar__links">
+          <a href="#">header link one</a>
+          <a href="#">header link two</a>
+          <a href="#">header link three</a>
+        </div>
+      </nav>
+      <div class="hero-content"></div>
     </section>
-</body>
+  </body>
 </html>
