--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar__links">
           <a href="#">header link one</a>
           <a href="#">header link two</a>
-          <a href="#">header link threee</a>
+          <a href="#">header link three</a>
         </div>
       </nav>
       <div class="hero-content"></div>
