--- a/index.html
+++ b/index.html
@@ -7,16 +7,106 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="Hero">
-      <nav class="navbar">
-        <h1 class="navbar__header">Header Logo</h1>
-        <div class="navbar__links">
-          <a href="#">header link one</a>
-          <a href="#">header link two</a>
-          <a href="#">header link three</a>
+    <section class="hero">
+      <div class="container">
+        <div class="row">
+          <div class="hero__wrapper">
+            <nav class="navbar">
+              <h3 class="navbar__header">Header Logo</h3>
+              <div class="navbar__links">
+                <a class="nav__links" href="#">header link one</a>
+                <a class="nav__links" href="#">header link two</a>
+                <a class="nav__links" href="#">header link three</a>
+              </div>
+            </nav>
+
+            <div class="hero__description--wrapper">
+              <div class="hero__description">
+                <h1 class="hero__header">This website is awesome</h1>
+                <p class="hero__para">
+                  This website has some subtext that goes here under the main
+                  title. It's a smaller font and the color is lower contrast
+                </p>
+                <button class="hero__button">Sign Up</button>
+              </div>
+              <div class="hero__img">this is a placeholder for an image</div>
+            </div>
+          </div>
         </div>
-      </nav>
-      <div class="hero-content"></div>
+      </div>
+    </section>
+
+    <section class="info">
+      <div class="container">
+        <div class="row">
+          <div class="info__wrapper">
+            <h2 class="info__header">Some random information.</h2>
+            <div class="info__illustration">
+              <div class="info__illustration--boxes">
+                <div class="blue__box"></div>
+                <p class="info__illustration--para">
+                  this is some subtext under an illustration
+                </p>
+              </div>
+              <div class="info__illustration--boxes">
+                <div class="blue__box"></div>
+                <p class="info__illustration--para">
+                  this is some subtext under an illustration
+                </p>
+              </div>
+              <div class="info__illustration--boxes">
+                <div class="blue__box"></div>
+                <p class="info__illustration--para">
+                  this is some subtext under an illustration
+                </p>
+              </div>
+              <div class="info__illustration--boxes">
+                <div class="blue__box"></div>
+                <p class="info__illustration--para">
+                  this is some subtext under an illustration
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="testimonial">
+      <div class="container">
+        <div class="row">
+          <div class="testimonial__wrapper">
+            <h2 class="testimonial__header">
+              This is a inspiring quote, or a testimonial from a customer. Maybe
+              it's just filling up space, or maybe people will actually read it,
+              who knows? All I know is that it looks nice.
+            </h2>
+            <h3 class="testimonial__author">-Thor, God of Thunder</h3>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="CTA">
+      <div class="container">
+        <div class="row CTA__row">
+          <div class="CTA__wrapper">
+            <div class="CTA__content">
+              <h3 class="CTA__header">Call to action! It's time!</h3>
+              <p class="CTA__description">
+                Sign up for our product by clicking the button right over there!
+              </p>
+            </div>
+            <button class="CTA__button">Sign up</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <footer>
+        <h3 class="footer_header">Copyright&copy; The Odin Project 2023</h3>
+      </footer>
     </section>
   </body>
 </html>
